Wed Aug 28 10:51:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.0
	  - Support experimental context-tracing feature so that the warning
	    message can be complemented with the context messages.

Tue Aug 27 19:35:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* share/doc/users_guide_ja.texi : Add descriptions about newly added
	  context-messages supporting context-tracing.
	* share/doc/users_guide_en.texi : Ditto.

Mon Aug 26 11:44:55 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.1.0
	  - Support experimental context-tracing feature so that the warning
	    message can be complemented with the context messages.

Fri Aug 23 15:55:53 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/value.rb : Fix value version management degraded
	  during supporting context-tracing.

	* features/code_check/W0460.feature : Add scenario to reproduce
	  false-positive of W0460 code check.

Thu Aug 22 14:17:54 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Fix bad context-tracing during or after
	  evaluation of an iteration statement.
	* lib/adlint/cc1/object.rb : Ditto.
	* lib/adlint/cc1/value.rb : Ditto.

	* lib/adlint/cc1/trace.rb : Revise context-tracing interface in order
	  not to output context messages about futural controlling-expressions.
	* lib/adlint/exam/c_builtin/cc1_check.rb : Ditto.

Wed Aug  7 15:01:04 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_check.rb : Fix bad W0570 code check
	  degraded during supporting context-tracing.

	* features/code_check/W0570.feature : Add scenario to reproduce a known
	  bug.

Wed Aug  7 13:40:55 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/trace.rb : Fix bad context message emission of
	  undefinable variables.

	* features/code_check/W0460.feature : Add scenario to reproduce bad
	  context message problem.
