@@ -1,3 +1,9 @@
+Fri Aug 30 15:12:10 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/exam.rb : Refine Examination.def_registrant_phase so that
+	  code check in the optional examination package can be derived from
+	  the builtin code check class.
+
 Wed Aug 28 10:51:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* release.ga : 3.2.0
